force-app/main/default/objects/Setup_Settings__c/Setup_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Setup Settings</label>
</CustomObject>