force-app/main/default/objects/Setup_Settings__c/fields/Candidates_1__c.field-meta.xml
<CustomField>
    <fullName>Candidates_1__c</fullName>
    <label>Candidates 1</label>
    <type>TextArea</type>
</CustomField>