force-app/main/default/objects/Setup_Settings__c/fields/Candidates_2__c.field-meta.xml
<CustomField>
    <fullName>Candidates_2__c</fullName>
    <label>Candidates 2</label>
    <type>TextArea</type>
</CustomField>