force-app/main/default/objects/Setup_Settings__c/fields/Candidates_3__c.field-meta.xml
<CustomField>
    <fullName>Candidates_3__c</fullName>
    <label>Candidates 3</label>
    <type>TextArea</type>
</CustomField>