force-app/main/default/objects/Setup_Settings__c/fields/Record_Pages__c.field-meta.xml
<CustomField>
    <fullName>Record_Pages__c</fullName>
    <label>Record Pages</label>
    <type>TextArea</type>
</CustomField>