force-app/main/default/objects/Setup_Settings__c/fields/Selected_Prompts__c.field-meta.xml
<CustomField>
    <fullName>Selected_Prompts__c</fullName>
    <label>Selected Prompts</label>
    <type>TextArea</type>
</CustomField>